<resources>
    <string name="app_name">MacroBT</string>
    <string name="retroceso_fino">Retroceso Fino</string>
    <string name="avance_fino">Avance Fino</string>
    <string name="retroceso">Retroceso</string>
    <string name="avance">Avance</string>
    <string name="posicion_inicial">Posición Inicial</string>
    <string name="posicion_final">Posición Final</string>
    <string name="configuracion">Configuración</string>
    <string name="distancia">Distancia</string>
    <string name="pasos">Pasos</string>
    <string name="tiempo_restante">Tiempo Restante</string>
    <string name="ejecutar">Ejecutar</string>
    <string name="parar">Parar</string>
    <string name="hacer_foto">Hacer Foto</string>
    <string name="mostrar_distancia">: %1$.2f mm</string>
    <string name="mostrar_pasos">: %1$d</string>
    <string name="mostrar_tiempo">: %1$.2f s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="configuracion_del_rail">Configuración del rail</string>
    <string name="configuracion_de_la_sesion">Configuración de la sesión</string>
    <string name="pasos_por_revolucion">Pasos por revolución</string>
    <string name="distancia_por_paso">Distancia por paso</string>
    <string name="velocidad">Velocidad</string>
    <string name="segundos_entre_fotos">Segundos entre fotos</string>
    <string name="tiempo_de_exposicion">Tiempo de exposición</string>
    <string name="conectar">Conectar</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_del_dispositivo">Nombre del dispositivo</string>
</resources>
